# hyper-catalan-rs

./: Cargo.toml  README.md
benches/: benchmark.rs
src/: lib.rs  main.rs
src/calculator/: mod.rs
src/solver/: mod.rs
src/subdigon/: mod.rs
src/tests/: mod.rs
